--- a/index.html
+++ b/index.html
@@ -1,33 +1,23 @@
-{\rtf1\ansi\ansicpg1252\cocoartf2865
-\cocoatextscaling0\cocoaplatform0{\fonttbl\f0\froman\fcharset0 Times-Roman;}
-{\colortbl;\red255\green255\blue255;\red0\green0\blue0;}
-{\*\expandedcolortbl;;\cssrgb\c0\c0\c0;}
-\paperw11900\paperh16840\margl1440\margr1440\vieww11520\viewh8400\viewkind0
-\deftab720
-\pard\pardeftab720\partightenfactor0
-
-\f0\fs24 \cf0 \expnd0\expndtw0\kerning0
-\outl0\strokewidth0 \strokec2 <!DOCTYPE html>\
-<html lang="ru">\
-<head>\
-  <meta charset="UTF-8">\
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">\
-  <title>\uc0\u1053 \u1080 \u1083  \'97 \u1087 \u1077 \u1088 \u1089 \u1086 \u1085 \u1072 \u1083 \u1100 \u1085 \u1099 \u1081  \u1089 \u1072 \u1081 \u1090 </title>\
-  <link rel="stylesheet" href="style.css">\
-</head>\
-<body>\
-  <div class="container">\
-    <div class="card">\
-      <img src="photo.jpg" alt="\uc0\u1060 \u1086 \u1090 \u1086 " class="avatar">\
-      <h1>\uc0\u1053 \u1080 \u1083 </h1>\
-      <p class="subtitle">\uc0\u1057 \u1090 \u1091 \u1076 \u1077 \u1085 \u1090 , \u1091 \u1074 \u1083 \u1077 \u1082 \u1072 \u1102 \u1089 \u1100  \u1084 \u1072 \u1090 \u1077 \u1084 \u1072 \u1090 \u1080 \u1082 \u1086 \u1081 , \u1084 \u1091 \u1079 \u1099 \u1082 \u1086 \u1081  \u1080  \u1092 \u1086 \u1090 \u1086 \u1075 \u1088 \u1072 \u1092 \u1080 \u1077 \u1081 </p>\
-      <div class="contacts">\
-        <a href="mailto:your@email.com">\uc0\u55357 \u56551  Email</a>\
-        <a href="https://github.com/yourusername" target="_blank">\uc0\u55357 \u56507  GitHub</a>\
-        <a href="https://www.instagram.com/" target="_blank">\uc0\u55357 \u56567  Instagram</a>\
-      </div>\
-    </div>\
-  </div>\
-</body>\
-</html>\
-}
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Нил — персональный сайт</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <div class="container">
+    <div class="card">
+      <img src="photo.jpg" alt="Фото" class="avatar">
+      <h1>Нил</h1>
+      <p class="subtitle">Студент, увлекаюсь математикой, музыкой и фотографией</p>
+      <div class="contacts">
+        <a href="mailto:your@email.com">📧 Email</a>
+        <a href="https://github.com/yourusername" target="_blank">💻 GitHub</a>
+        <a href="https://www.instagram.com/" target="_blank">📷 Instagram</a>
+      </div>
+    </div>
+  </div>
+</body>
+</html>
