--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 <body>
   <div class="container">
     <div class="card">
-      <img src="photo.jpg" alt="Фото" class="avatar">
+      <img src="avatar.jpg" alt="Фото" class="avatar">
       <h1>Нил</h1>
-      <p class="subtitle">Студент, увлекаюсь математикой, музыкой и фотографией</p>
+      <p class="subtitle">Студент надеюсь</p>
       <div class="contacts">
-        <a href="mailto:your@email.com">📧 Email</a>
-        <a href="https://github.com/yourusername" target="_blank">💻 GitHub</a>
-        <a href="https://www.instagram.com/" target="_blank">📷 Instagram</a>
+        <a href="mailto:luukiinii@gmail.com">My Email</a>
+        <a href="https://github.com/stranniebudni" target="_blank">My GitHub</a>
+        <a href="https://www.instagram.com/strannie_budni/" target="_blank">My Instagram</a>
       </div>
     </div>
   </div>
