--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
         <a href="mailto:luukiinii@gmail.com">My Email</a>
         <a href="https://github.com/stranniebudni" target="_blank">My GitHub</a>
         <a href="https://www.instagram.com/strannie_budni/" target="_blank">My Instagram</a>
+        <a href="https://t.me/Strannie_budni" target="_blank">My Instagram</a>
+
       </div>
     </div>
   </div>
