--- a/index.html
+++ b/index.html
@@ -5,8 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Нил — персональный сайт</title>
   <link rel="stylesheet" href="style.css">
-  <link rel="icon" type="image/png" sizes="32x32" href="icon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="icon-16x16.png">
 </head>
 <body>
   <div class="container">
@@ -18,7 +16,7 @@
         <a href="mailto:luukiinii@gmail.com">My Email</a>
         <a href="https://github.com/stranniebudni" target="_blank">My GitHub</a>
         <a href="https://www.instagram.com/strannie_budni/" target="_blank">My Instagram</a>
-        <a href="https://t.me/Strannie_budni" target="_blank">My Instagram</a>
+        <a href="https://t.me/Strannie_budni" target="_blank">My Telegram</a>
 
       </div>
     </div>
