--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
   <div class="container">
     <div class="card">
       <div class="lang-switch">
-        <button onclick="setLang('ru')">🇷🇺 RU</button>
-        <button onclick="setLang('en')">🇬🇧 EN</button>
-        <button onclick="setLang('sr')">🇷🇸 SR</button>
+        <button onclick="setLang('ru')">RU</button>
+        <button onclick="setLang('en')">EN</button>
+        <button onclick="setLang('sr')">SR</button>
       </div>
 
       <img src="avatar.jpg" alt="Фото" class="avatar">
@@ -38,8 +38,8 @@
         telegram: "Мой Telegram"
       },
       en: {
-        name: "Nil",
-        subtitle: "A student, hopefully",
+        name: "Neil",
+        subtitle: "A student",
         email: "My Email",
         github: "My GitHub",
         instagram: "My Instagram",
@@ -47,7 +47,7 @@
       },
       sr: {
         name: "Нил",
-        subtitle: "Student, valjda",
+        subtitle: "Student",
         email: "Moj mejl",
         github: "Moj GitHub",
         instagram: "Moj Instagram",
