--- a/index.html
+++ b/index.html
@@ -10,14 +10,15 @@
   <div class="container">
     <div class="card">
       <div class="lang-switch">
-        <button onclick="setLang('ru')">RU</button>
-        <button onclick="setLang('en')">EN</button>
-        <button onclick="setLang('sr')">SR</button>
+        <button id="btn-ru" onclick="setLang('ru')">RU</button>
+        <button id="btn-en" onclick="setLang('en')">EN</button>
+        <button id="btn-sr" onclick="setLang('sr')">SR</button>
       </div>
 
       <img src="avatar.jpg" alt="Фото" class="avatar">
       <h1 id="name">Нил</h1>
-      <p id="subtitle" class="subtitle">Студент надеюсь</p>
+      <p id="subtitle" class="subtitle">Студент, надеюсь</p>
+
       <div class="contacts">
         <a id="email" href="mailto:luukiinii@gmail.com">Моя почта</a>
         <a id="github" href="https://github.com/stranniebudni" target="_blank">Мой GitHub</a>
@@ -38,7 +39,7 @@
         telegram: "Мой Telegram"
       },
       en: {
-        name: "Neil",
+        name: "Nil",
         subtitle: "A student",
         email: "My Email",
         github: "My GitHub",
@@ -57,12 +58,14 @@
 
     function setLang(lang) {
       localStorage.setItem('lang', lang);
-      document.getElementById('name').textContent = texts[lang].name;
-      document.getElementById('subtitle').textContent = texts[lang].subtitle;
-      document.getElementById('email').textContent = texts[lang].email;
-      document.getElementById('github').textContent = texts[lang].github;
-      document.getElementById('instagram').textContent = texts[lang].instagram;
-      document.getElementById('telegram').textContent = texts[lang].telegram;
+      // обновление текста
+      for (const key in texts[lang]) {
+        if (document.getElementById(key))
+          document.getElementById(key).textContent = texts[lang][key];
+      }
+      // подсветка кнопки
+      document.querySelectorAll('.lang-switch button').forEach(btn => btn.classList.remove('active'));
+      document.getElementById('btn-' + lang).classList.add('active');
     }
 
     const saved = localStorage.getItem('lang') || 'ru';
