--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Нил — персональный сайт</title>
   <link rel="stylesheet" href="style.css">
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
+
 </head>
 <body>
   <div class="container">
@@ -71,5 +74,23 @@
     const saved = localStorage.getItem('lang') || 'ru';
     setLang(saved);
   </script>
+
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+<script>
+  AOS.init();
+</script>
+
+
+
+
 </body>
+
+<div class="card" data-aos="fade-up">
+  ...
+</div>
+
+
+
+
+
 </html>
