--- a/index.html
+++ b/index.html
@@ -55,24 +55,24 @@
     // --- Многоязычность ---
     const texts = {
       ru: {
-        name: "Нил",
-        subtitle: "Студент, надеюсь",
+        name: "Нил Мистрюков",
+        subtitle: "19 лет. Родился в Москве, Россия. В данный момент живу в Белграде, Сербия.",
         email: "Моя почта",
         github: "Мой GitHub",
         instagram: "Мой Instagram",
         telegram: "Мой Telegram"
       },
       en: {
-        name: "Nil",
-        subtitle: "A student",
+        name: "Nil Mistriukov",
+        subtitle: "I am 19 years old. Born in Moscow, Russia. Currently living in Belgrade, Serbia.",
         email: "My Email",
         github: "My GitHub",
         instagram: "My Instagram",
         telegram: "My Telegram"
       },
       sr: {
-        name: "Нил",
-        subtitle: "Student",
+        name: "Нил Мистрјуков",
+        subtitle: "19 година. Рођен у Москви, Русија. Тренутно живим у Београду, Србија.",
         email: "Moj mejl",
         github: "Moj GitHub",
         instagram: "Moj Instagram",
