--- a/index.html
+++ b/index.html
@@ -7,6 +7,24 @@
   <link rel="stylesheet" href="style.css">
   <!-- AOS для анимации при скролле -->
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
+  <!-- SEO метатеги -->
+  <meta name="description" content="Персональный сайт Нила Мистрюкова — информация о проектах, навыках и контактах.">
+  <meta name="keywords" content="Нил Мистрюков, портфолио, проекты, резюме, программист, студент">
+  <meta name="author" content="Нил Мистрюков">
+
+  <!-- Open Graph для соцсетей -->
+  <meta property="og:title" content="Нил Мистрюков — Персональный сайт">
+  <meta property="og:description" content="Проекты, навыки и контактная информация Нила Мистрюкова.">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://stranniebudni.github.io/">
+  <meta property="og:image" content="avatar.jpg">
+
+  <!-- Twitter Cards -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Нил Мистрюков — Персональный сайт">
+  <meta name="twitter:description" content="Проекты, навыки и контактная информация Нила Мистрюкова.">
+  <meta name="twitter:image" content="avatar.jpg">
 </head>
 
 <body>
