--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Нил — персональный сайт</title>
   <link rel="stylesheet" href="style.css">
-  <!-- AOS для анимации при скролле -->
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
   <!-- SEO метатеги -->
@@ -13,7 +12,7 @@
   <meta name="keywords" content="Нил Мистрюков, портфолио, проекты, резюме, программист, студент">
   <meta name="author" content="Нил Мистрюков">
 
-  <!-- Open Graph для соцсетей -->
+  <!-- Open Graph -->
   <meta property="og:title" content="Нил Мистрюков — Персональный сайт">
   <meta property="og:description" content="Проекты, навыки и контактная информация Нила Мистрюкова.">
   <meta property="og:type" content="website">
@@ -49,59 +48,29 @@
     </div>
   </div>
 
-  <!-- Подключаем GSAP -->
+  <!-- GSAP -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
-
-  <!-- Подключаем AOS -->
+  <!-- AOS -->
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 
   <script>
     // Инициализация AOS
-    AOS.init({
-      duration: 1000, // скорость анимации
-      once: true,     // анимация только при первом появлении
-    });
+    AOS.init({ duration: 1000, once: true });
 
     // Анимация при загрузке с GSAP
-    gsap.from(".card", {
-      duration: 1,
-      opacity: 0,
-      y: 50,
-      ease: "power3.out"
-    });
+    gsap.from(".card", { duration: 1, opacity: 0, y: 50, ease: "power3.out" });
 
-    // --- Многоязычность ---
+    // Многоязычность
     const texts = {
-      ru: {
-        name: "Нил Мистрюков",
-        subtitle: "19 лет. Родился в Москве, Россия. В данный момент живу в Белграде, Сербия.",
-        email: "Моя почта",
-        github: "Мой GitHub",
-        instagram: "Мой Instagram",
-        telegram: "Мой Telegram"
-      },
-      en: {
-        name: "Nil Mistriukov",
-        subtitle: "I am 19 years old. Born in Moscow, Russia. Currently living in Belgrade, Serbia.",
-        email: "My Email",
-        github: "My GitHub",
-        instagram: "My Instagram",
-        telegram: "My Telegram"
-      },
-      sr: {
-        name: "Нил Мистрјуков",
-        subtitle: "19 година. Рођен у Москви, Русија. Тренутно живим у Београду, Србија.",
-        email: "Moj mejl",
-        github: "Moj GitHub",
-        instagram: "Moj Instagram",
-        telegram: "Moj Telegram"
-      }
+      ru: { name: "Нил Мистрюков", subtitle: "19 лет. Родился в Москве, Россия. В данный момент живу в Белграде, Сербия.", email: "Моя почта", github: "Мой GitHub", instagram: "Мой Instagram", telegram: "Мой Telegram" },
+      en: { name: "Nil Mistriukov", subtitle: "I am 19 years old. Born in Moscow, Russia. Currently living in Belgrade, Serbia.", email: "My Email", github: "My GitHub", instagram: "My Instagram", telegram: "My Telegram" },
+      sr: { name: "Нил Мистрјуков", subtitle: "19 година. Рођен у Москви, Русија. Тренутно живим у Београду, Србија.", email: "Moj mejl", github: "Moj GitHub", instagram: "Moj Instagram", telegram: "Moj Telegram" }
     };
 
     function setLang(lang) {
       localStorage.setItem('lang', lang);
       for (const key in texts[lang]) {
-        if (document.getElementById(key))
+        if(document.getElementById(key))
           document.getElementById(key).textContent = texts[lang][key];
       }
       document.querySelectorAll('.lang-switch button').forEach(btn => btn.classList.remove('active'));
@@ -110,6 +79,25 @@
 
     const saved = localStorage.getItem('lang') || 'ru';
     setLang(saved);
+
+    // --- Параллакс при движении мыши ---
+    const card = document.querySelector('.card');
+    const avatar = document.querySelector('.avatar');
+    const name = document.getElementById('name');
+    const subtitle = document.getElementById('subtitle');
+
+    document.addEventListener('mousemove', e => {
+      const x = (e.clientX / window.innerWidth - 0.5) * 30;
+      const y = (e.clientY / window.innerHeight - 0.5) * 30;
+
+      gsap.to(card, { rotationY: x, rotationX: -y, transformPerspective: 500, transformOrigin: "center", duration: 0.5, ease: "power1.out" });
+      gsap.to([avatar, name, subtitle], { x: x/4, y: -y/4, duration: 0.5, ease: "power1.out" });
+    });
+
+    document.addEventListener('mouseleave', () => {
+      gsap.to(card, { rotationX: 0, rotationY: 0, duration: 0.5, ease: "power1.out" });
+      gsap.to([avatar, name, subtitle], { x: 0, y: 0, duration: 0.5, ease: "power1.out" });
+    });
   </script>
 </body>
 </html>
