--- a/index.html
+++ b/index.html
@@ -57,48 +57,70 @@
     // Инициализация AOS
     AOS.init({ duration: 1000, once: true });
 
-    // Анимация при загрузке с GSAP
+    // Анимация появления карточки
     gsap.from(".card", { duration: 1, opacity: 0, y: 50, ease: "power3.out" });
 
-    // Многоязычность
+    // --- Многоязычность ---
     const texts = {
-      ru: { name: "Нил Мистрюков", subtitle: "19 лет. Родился в Москве, Россия. В данный момент живу в Белграде, Сербия.", email: "Моя почта", github: "Мой GitHub", instagram: "Мой Instagram", telegram: "Мой Telegram" },
-      en: { name: "Nil Mistriukov", subtitle: "I am 19 years old. Born in Moscow, Russia. Currently living in Belgrade, Serbia.", email: "My Email", github: "My GitHub", instagram: "My Instagram", telegram: "My Telegram" },
-      sr: { name: "Нил Мистрјуков", subtitle: "19 година. Рођен у Москви, Русија. Тренутно живим у Београду, Србија.", email: "Moj mejl", github: "Moj GitHub", instagram: "Moj Instagram", telegram: "Moj Telegram" }
+      ru: {
+        name: "Нил Мистрюков",
+        subtitle: "19 лет. Родился в Москве, Россия. В данный момент живу в Белграде, Сербия.",
+        email: "Моя почта",
+        github: "Мой GitHub",
+        instagram: "Мой Instagram",
+        telegram: "Мой Telegram"
+      },
+      en: {
+        name: "Nil Mistriukov",
+        subtitle: "I am 19 years old. Born in Moscow, Russia. Currently living in Belgrade, Serbia.",
+        email: "My Email",
+        github: "My GitHub",
+        instagram: "My Instagram",
+        telegram: "My Telegram"
+      },
+      sr: {
+        name: "Нил Мистрјуков",
+        subtitle: "19 година. Рођен у Москви, Русија. Тренутно живим у Београду, Србија.",
+        email: "Moj mejl",
+        github: "Moj GitHub",
+        instagram: "Moj Instagram",
+        telegram: "Moj Telegram"
+      }
     };
 
     function setLang(lang) {
       localStorage.setItem('lang', lang);
       for (const key in texts[lang]) {
-        if(document.getElementById(key))
-          document.getElementById(key).textContent = texts[lang][key];
+        const el = document.getElementById(key);
+        if(el) el.textContent = texts[lang][key];
       }
       document.querySelectorAll('.lang-switch button').forEach(btn => btn.classList.remove('active'));
       document.getElementById('btn-' + lang).classList.add('active');
     }
 
-    const saved = localStorage.getItem('lang') || 'ru';
-    setLang(saved);
+    setLang(localStorage.getItem('lang') || 'ru');
 
-    // --- Параллакс при движении мыши ---
+    // --- Параллакс движения мыши ---
     const card = document.querySelector('.card');
     const avatar = document.querySelector('.avatar');
     const name = document.getElementById('name');
     const subtitle = document.getElementById('subtitle');
 
-    document.addEventListener('mousemove', e => {
-      const x = (e.clientX / window.innerWidth - 0.5) * 30;
-      const y = (e.clientY / window.innerHeight - 0.5) * 30;
-
-      gsap.to(card, { rotationY: x, rotationX: -y, transformPerspective: 500, transformOrigin: "center", duration: 0.5, ease: "power1.out" });
-      gsap.to([avatar, name, subtitle], { x: x/4, y: -y/4, duration: 0.5, ease: "power1.out" });
-    });
-
-    document.addEventListener('mouseleave', () => {
-      gsap.to(card, { rotationX: 0, rotationY: 0, duration: 0.5, ease: "power1.out" });
-      gsap.to([avatar, name, subtitle], { x: 0, y: 0, duration: 0.5, ease: "power1.out" });
-    });
+    if(card) {
+      const elems = [avatar, name, subtitle].filter(e => e !== null);
+      document.addEventListener('mousemove', e => {
+        const x = (e.clientX / window.innerWidth - 0.5) * 30;
+        const y = (e.clientY / window.innerHeight - 0.5) * 30;
+        gsap.to(card, { rotationY: x, rotationX: -y, transformPerspective: 500, transformOrigin: "center", duration: 0.5, ease: "power1.out" });
+        gsap.to(elems, { x: x/4, y: -y/4, duration: 0.5, ease: "power1.out" });
+      });
+      document.addEventListener('mouseleave', () => {
+        gsap.to(card, { rotationX:0, rotationY:0, duration:0.5, ease:"power1.out" });
+        gsap.to(elems, { x:0, y:0, duration:0.5, ease:"power1.out" });
+      });
+    }
   </script>
 </body>
 </html>
+
 // fuck
