--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
   <title>Нил — визитка</title>
 
   <link rel="stylesheet" href="style.css" />
+  <!-- AOS можно оставить для второстепенных эффектов (аватар), но мы сняли его с текста/карточки -->
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
 
   <!-- SEO -->
   <meta name="description" content="Персональный сайт Нила Мистрюкова — информация о проектах, навыках и контактах." />
-  <meta name="keywords" content="Нил Мистрюков, портфолио, проекты, резюме, программист, студент" />
   <meta name="author" content="Нил Мистрюков" />
   <meta name="theme-color" content="#0f2027" />
 
@@ -19,7 +19,6 @@
   <meta property="og:description" content="Проекты, навыки и контактная информация Нила Мистрюкова." />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://stranniebudni.github.io/" />
-  <!-- Лучше абсолютная ссылка на изображение -->
   <meta property="og:image" content="https://stranniebudni.github.io/avatar.jpg" />
 
   <!-- Twitter -->
@@ -28,10 +27,12 @@
   <meta name="twitter:description" content="Проекты, навыки и контактная информация Нила Мистрюкова." />
   <meta name="twitter:image" content="https://stranniebudni.github.io/avatar.jpg" />
 </head>
-
 <body>
   <div class="container">
-    <div class="card" data-aos="fade-up">
+    <!-- Кнопка темы над карточкой -->
+    <button class="theme-toggle" id="themeToggle" type="button" aria-label="Переключить тему">Тема</button>
+
+    <div class="card">
       <nav class="lang-switch" aria-label="Смена языка">
         <button id="btn-ru" type="button" onclick="setLang('ru')" aria-pressed="true">RU</button>
         <button id="btn-en" type="button" onclick="setLang('en')" aria-pressed="false">EN</button>
@@ -46,13 +47,14 @@
         height="240"
         decoding="async"
         data-aos="zoom-in"
-        data-aos-delay="200"
+        data-aos-delay="150"
       />
 
-      <h1 id="name" data-aos="fade-right" data-aos-delay="400">Нил</h1>
-      <p id="subtitle" class="subtitle" data-aos="fade-left" data-aos-delay="600">Студент, надеюсь</p>
+      <!-- С этих элементов снят AOS — ими управляет GSAP -->
+      <h1 id="name">Нил</h1>
+      <p id="subtitle" class="subtitle">Студент, надеюсь</p>
 
-      <div class="contacts" data-aos="fade-up" data-aos-delay="800">
+      <div class="contacts">
         <a id="email" href="mailto:luukiinii@gmail.com">Моя почта</a>
         <a id="github" href="https://github.com/stranniebudni" target="_blank" rel="noopener noreferrer">Мой GitHub</a>
         <a id="instagram" href="https://www.instagram.com/strannie_budni/" target="_blank" rel="noopener noreferrer">Мой Instagram</a>
@@ -61,7 +63,7 @@
     </div>
   </div>
 
-  <!-- Скрипты (все с defer, чтобы DOM успел отрисоваться) -->
+  <!-- Скрипты -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js" defer></script>
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js" defer></script>
   <script src="lang.js" defer></script>
