--- a/index.html
+++ b/index.html
@@ -1,71 +1,180 @@
-<!DOCTYPE html>
-<html lang="ru">
+<!doctype html>
+<html lang="ru" data-theme="light">
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Нил — визитка</title>
+  <meta name="color-scheme" content="light dark" />
 
-  <link rel="stylesheet" href="style.css" />
-  <!-- AOS можно оставить для второстепенных эффектов (аватар), но мы сняли его с текста/карточки -->
-  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
+  <title>Нил Мистрюков</title>
+  <meta name="description" content="Персональная страница-визитка: Нил Мистрюков - Data Science student." />
 
-  <!-- SEO -->
-  <meta name="description" content="Персональный сайт Нила Мистрюкова — информация о проектах, навыках и контактах." />
-  <meta name="author" content="Нил Мистрюков" />
-  <meta name="theme-color" content="#0f2027" />
+  <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon-16x16.png" />
+  <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon-32x32.png" />
+  <link rel="manifest" href="site.webmanifest" />
 
-  <!-- Open Graph -->
-  <meta property="og:title" content="Нил Мистрюков — Персональный сайт" />
-  <meta property="og:description" content="Проекты, навыки и контактная информация Нила Мистрюкова." />
-  <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://stranniebudni.github.io/" />
-  <meta property="og:image" content="https://stranniebudni.github.io/avatar.jpg" />
-
-  <!-- Twitter -->
-  <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="Нил Мистрюков — Персональный сайт" />
-  <meta name="twitter:description" content="Проекты, навыки и контактная информация Нила Мистрюкова." />
-  <meta name="twitter:image" content="https://stranniebudni.github.io/avatar.jpg" />
+  <link rel="stylesheet" href="css/style.css" />
+  <script defer src="js/app.js"></script>
 </head>
-<body>
-  <div class="container">
-    <!-- Кнопка темы над карточкой -->
-    <button class="theme-toggle" id="themeToggle" type="button" aria-label="Переключить тему">Тема</button>
 
-    <div class="card">
-      <nav class="lang-switch" aria-label="Смена языка">
-        <button id="btn-ru" type="button" onclick="setLang('ru')" aria-pressed="true">RU</button>
-        <button id="btn-en" type="button" onclick="setLang('en')" aria-pressed="false">EN</button>
-        <button id="btn-sr" type="button" onclick="setLang('sr')" aria-pressed="false">SR</button>
+<body>
+  <div class="progress" id="scrollProgress" aria-hidden="true"></div>
+
+  <header class="header" role="banner">
+    <div class="container header__inner">
+      <a class="brand" href="#home" aria-label="Home">
+        <span class="brand__mark">NM</span>
+        <span class="brand__text" data-i18n="brand"></span>
+      </a>
+
+      <nav class="nav" aria-label="Primary">
+        <a class="nav__link" href="#about" data-i18n="nav.about"></a>
+        <a class="nav__link" href="#highlights" data-i18n="nav.highlights"></a>
+        <a class="nav__link" href="#links" data-i18n="nav.links"></a>
       </nav>
 
-      <img
-        src="avatar.jpg"
-        alt="Фото Нила"
-        class="avatar"
-        width="240"
-        height="240"
-        decoding="async"
-        data-aos="zoom-in"
-        data-aos-delay="150"
-      />
+      <div class="controls">
+        <button class="btn btn--ghost" id="themeToggle" type="button" aria-pressed="false">
+          <span class="btn__icon" aria-hidden="true">
+            <svg viewBox="0 0 24 24" width="18" height="18" fill="none">
+              <path d="M12 3v2" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"/>
+              <path d="M12 19v2" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"/>
+              <path d="M4.22 4.22l1.41 1.41" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"/>
+              <path d="M18.36 18.36l1.41 1.41" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"/>
+              <path d="M3 12h2" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"/>
+              <path d="M19 12h2" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"/>
+              <path d="M4.22 19.78l1.41-1.41" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"/>
+              <path d="M18.36 5.64l1.41-1.41" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"/>
+              <path d="M12 17a5 5 0 1 0 0-10 5 5 0 0 0 0 10Z" stroke="currentColor" stroke-width="1.5"/>
+            </svg>
+          </span>
+          <span class="btn__label" id="themeLabel"></span>
+        </button>
 
-      <!-- С этих элементов снят AOS — ими управляет GSAP -->
-      <h1 id="name">Нил</h1>
-      <p id="subtitle" class="subtitle">Студент, надеюсь</p>
-
-      <div class="contacts">
-        <a id="email" href="mailto:luukiinii@gmail.com">Моя почта</a>
-        <a id="github" href="https://github.com/stranniebudni" target="_blank" rel="noopener noreferrer">Мой GitHub</a>
-        <a id="instagram" href="https://www.instagram.com/strannie_budni/" target="_blank" rel="noopener noreferrer">Мой Instagram</a>
-        <a id="telegram" href="https://t.me/Strannie_budni" target="_blank" rel="noopener noreferrer">Мой Telegram</a>
+        <div class="lang">
+          <label class="sr-only" for="langSelect" data-i18n="ui.languageLabel"></label>
+          <select id="langSelect" class="select" aria-label="Language">
+            <option value="ru">RU</option>
+            <option value="en">EN</option>
+            <option value="de">DE</option>
+            <option value="sr">SR</option>
+          </select>
+        </div>
       </div>
     </div>
-  </div>
+  </header>
 
-  <!-- Скрипты -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js" defer></script>
-  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js" defer></script>
-  <script src="lang.js" defer></script>
-</body>
-</html>
+  <main class="main" id="home">
+    <section class="hero container">
+      <div class="hero__card card" data-reveal>
+        <div class="hero__media">
+          <img class="avatar" src="assets/avatar.jpg" alt="Portrait photo" loading="eager" />
+        </div>
+
+        <div class="hero__body">
+          <h1 class="hero__title" data-i18n="hero.name"></h1>
+          <p class="hero__subtitle muted" data-i18n="hero.subtitle"></p>
+
+          <p class="hero__desc lead" data-i18n="hero.desc"></p>
+
+          <div class="hero__actions">
+            <a class="btn" href="#links" data-i18n="hero.ctaPrimary"></a>
+
+            <button class="btn btn--ghost" id="copyPageLink" type="button" data-i18n="hero.ctaSecondary"></button>
+
+            <span class="toast" id="toast" role="status" aria-live="polite" aria-atomic="true"></span>
+          </div>
+
+          <div class="chips" aria-label="Quick topics">
+            <button class="chip" type="button" data-chip="ds">Data Science</button>
+            <button class="chip" type="button" data-chip="python">Python</button>
+            <button class="chip" type="button" data-chip="ml">ML</button>
+            <button class="chip" type="button" data-chip="viz">Viz</button>
+          </div>
+        </div>
+      </div>
+
+      <div class="mini card" id="chipPanel" data-reveal>
+        <div class="mini__head">
+          <h3 class="mini__title" id="chipTitle"></h3>
+          <button class="mini__close" id="chipClose" type="button" aria-label="Close">
+            <svg viewBox="0 0 24 24" width="18" height="18" fill="none">
+              <path d="M6 6l12 12" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"/>
+              <path d="M18 6L6 18" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"/>
+            </svg>
+          </button>
+        </div>
+        <p class="mini__text muted" id="chipText"></p>
+      </div>
+    </section>
+
+    <section class="section container" id="about">
+      <div class="section__head" data-reveal>
+        <h2 class="section__title" data-i18n="about.title"></h2>
+        <p class="section__text muted" data-i18n="about.text"></p>
+      </div>
+
+      <div class="grid" data-reveal>
+        <article class="card card--flat">
+          <h3 class="card__title" data-i18n="about.cards.c1.title"></h3>
+          <p class="card__text muted" data-i18n="about.cards.c1.text"></p>
+        </article>
+
+        <article class="card card--flat">
+          <h3 class="card__title" data-i18n="about.cards.c2.title"></h3>
+          <p class="card__text muted" data-i18n="about.cards.c2.text"></p>
+        </article>
+
+        <article class="card card--flat">
+          <h3 class="card__title" data-i18n="about.cards.c3.title"></h3>
+          <p class="card__text muted" data-i18n="about.cards.c3.text"></p>
+        </article>
+      </div>
+    </section>
+
+    <section class="section container" id="highlights">
+      <div class="section__head" data-reveal>
+        <h2 class="section__title" data-i18n="high.title"></h2>
+        <p class="section__text muted" data-i18n="high.text"></p>
+      </div>
+
+      <div class="stack" data-reveal>
+        <details class="accordion" open>
+          <summary class="accordion__summary" data-i18n="high.a1.title"></summary>
+          <div class="accordion__content muted" data-i18n="high.a1.text"></div>
+        </details>
+
+        <details class="accordion">
+          <summary class="accordion__summary" data-i18n="high.a2.title"></summary>
+          <div class="accordion__content muted" data-i18n="high.a2.text"></div>
+        </details>
+
+        <details class="accordion">
+          <summary class="accordion__summary" data-i18n="high.a3.title"></summary>
+          <div class="accordion__content muted" data-i18n="high.a3.text"></div>
+        </details>
+      </div>
+    </section>
+
+    <section class="section container" id="links">
+      <div class="section__head" data-reveal>
+        <h2 class="section__title" data-i18n="links.title"></h2>
+        <p class="section__text muted" data-i18n="links.text"></p>
+      </div>
+
+      <div class="socials" data-reveal>
+        <!-- Замени USERNAME и ссылки на свои реальные -->
+        <a class="social" href="https://github.com/USERNAME" target="_blank" rel="noreferrer">
+          <span class="social__icon" aria-hidden="true">
+            <svg viewBox="0 0 24 24" width="18" height="18" fill="none">
+              <path d="M9 19c-4 1.2-4-2-5-2m10 4v-3.1c0-.9.3-1.6.8-2-2.7-.3-5.5-1.3-5.5-5.8 0-1.3.5-2.4 1.2-3.2-.1-.3-.5-1.5.1-3 0 0 1-.3 3.3 1.2a11 11 0 0 1 6 0C18.5 5.5 19.5 5.8 19.5 5.8c.6 1.5.2 2.7.1 3 .8.8 1.2 1.9 1.2 3.2 0 4.5-2.8 5.5-5.5 5.8.5.4.9 1.2.9 2.4V21" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+            </svg>
+          </span>
+          <span class="social__label">GitHub</span>
+          <span class="social__hint muted" data-i18n="links.open"></span>
+        </a>
+
+        <a class="social" href="https://www.linkedin.com/in/USERNAME" target="_blank" rel="noreferrer">
+          <span class="social__icon" aria-hidden="true">
+            <svg viewBox="0 0 24 24" width="18" height="18" fill="none">
+              <path d="M6.5 9.5V18" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"/>
+              <path d="M6.5 6.5h0.01" st
