Add social media links to index.html
Added social media links for LinkedIn, Telegram, and Instagram with corresponding SVG icons.

--- a/index.html
+++ b/index.html
@@ -177,4 +177,49 @@
           <span class="social__icon" aria-hidden="true">
             <svg viewBox="0 0 24 24" width="18" height="18" fill="none">
               <path d="M6.5 9.5V18" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"/>
-              <path d="M6.5 6.5h0.01" st
+              <path d="M6.5 6.5h0.01" stroke="currentColor" stroke-width="3" stroke-linecap="round"/>
+              <path d="M10.5 18v-4.3c0-2.3 3-2.5 3-0.1V18" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+              <path d="M13.5 13.7c0-2.8 4-3 4-.1V18" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+              <path d="M4 4h16v16H4z" stroke="currentColor" stroke-width="1.5" opacity="0.35"/>
+            </svg>
+          </span>
+          <span class="social__label">LinkedIn</span>
+          <span class="social__hint muted" data-i18n="links.open"></span>
+        </a>
+
+        <a class="social" href="https://t.me/USERNAME" target="_blank" rel="noreferrer">
+          <span class="social__icon" aria-hidden="true">
+            <svg viewBox="0 0 24 24" width="18" height="18" fill="none">
+              <path d="M21 5L10 13" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"/>
+              <path d="M21 5l-7 16-4-8-7-2 18-6Z" stroke="currentColor" stroke-width="1.5" stroke-linejoin="round"/>
+            </svg>
+          </span>
+          <span class="social__label">Telegram</span>
+          <span class="social__hint muted" data-i18n="links.open"></span>
+        </a>
+
+        <a class="social" href="https://instagram.com/USERNAME" target="_blank" rel="noreferrer">
+          <span class="social__icon" aria-hidden="true">
+            <svg viewBox="0 0 24 24" width="18" height="18" fill="none">
+              <path d="M8 3h8a5 5 0 0 1 5 5v8a5 5 0 0 1-5 5H8a5 5 0 0 1-5-5V8a5 5 0 0 1 5-5Z" stroke="currentColor" stroke-width="1.5"/>
+              <path d="M12 16a4 4 0 1 0 0-8 4 4 0 0 0 0 8Z" stroke="currentColor" stroke-width="1.5"/>
+              <path d="M17.5 6.5h0.01" stroke="currentColor" stroke-width="3" stroke-linecap="round"/>
+            </svg>
+          </span>
+          <span class="social__label">Instagram</span>
+          <span class="social__hint muted" data-i18n="links.open"></span>
+        </a>
+      </div>
+
+      <p class="note muted" data-reveal data-i18n="links.note"></p>
+    </section>
+
+    <footer class="footer container">
+      <div class="footer__inner" data-reveal>
+        <span class="muted" data-i18n="footer.left"></span>
+        <span class="muted" id="year"></span>
+      </div>
+    </footer>
+  </main>
+</body>
+</html>
