--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 
       <div class="socials" data-reveal>
         <!-- Замени USERNAME и ссылки на свои реальные -->
-        <a class="social" href="https://github.com/USERNAME" target="_blank" rel="noreferrer">
+        <a class="social" href="https://github.com/stranniebudni" target="_blank" rel="noreferrer">
           <span class="social__icon" aria-hidden="true">
             <svg viewBox="0 0 24 24" width="18" height="18" fill="none">
               <path d="M9 19c-4 1.2-4-2-5-2m10 4v-3.1c0-.9.3-1.6.8-2-2.7-.3-5.5-1.3-5.5-5.8 0-1.3.5-2.4 1.2-3.2-.1-.3-.5-1.5.1-3 0 0 1-.3 3.3 1.2a11 11 0 0 1 6 0C18.5 5.5 19.5 5.8 19.5 5.8c.6 1.5.2 2.7.1 3 .8.8 1.2 1.9 1.2 3.2 0 4.5-2.8 5.5-5.5 5.8.5.4.9 1.2.9 2.4V21" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
@@ -173,7 +173,7 @@
           <span class="social__hint muted" data-i18n="links.open"></span>
         </a>
 
-        <a class="social" href="https://www.linkedin.com/in/USERNAME" target="_blank" rel="noreferrer">
+        <a class="social" href="https://www.linkedin.com/in/neil-mistriukov-56980628b/" target="_blank" rel="noreferrer">
           <span class="social__icon" aria-hidden="true">
             <svg viewBox="0 0 24 24" width="18" height="18" fill="none">
               <path d="M6.5 9.5V18" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"/>
@@ -187,7 +187,7 @@
           <span class="social__hint muted" data-i18n="links.open"></span>
         </a>
 
-        <a class="social" href="https://t.me/USERNAME" target="_blank" rel="noreferrer">
+        <a class="social" href="https://t.me/Strannie_budni" target="_blank" rel="noreferrer">
           <span class="social__icon" aria-hidden="true">
             <svg viewBox="0 0 24 24" width="18" height="18" fill="none">
               <path d="M21 5L10 13" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"/>
@@ -198,7 +198,7 @@
           <span class="social__hint muted" data-i18n="links.open"></span>
         </a>
 
-        <a class="social" href="https://instagram.com/USERNAME" target="_blank" rel="noreferrer">
+        <a class="social" href="https://www.instagram.com/strannie_budni/" target="_blank" rel="noreferrer">
           <span class="social__icon" aria-hidden="true">
             <svg viewBox="0 0 24 24" width="18" height="18" fill="none">
               <path d="M8 3h8a5 5 0 0 1 5 5v8a5 5 0 0 1-5 5H8a5 5 0 0 1-5-5V8a5 5 0 0 1 5-5Z" stroke="currentColor" stroke-width="1.5"/>
@@ -209,6 +209,18 @@
           <span class="social__label">Instagram</span>
           <span class="social__hint muted" data-i18n="links.open"></span>
         </a>
+
+        <a class="social" href="mailto:neilbv007@gmail.com">
+          <span class="social__icon" aria-hidden="true">
+            <svg viewBox="0 0 24 24" width="18" height="18" fill="none">
+              <path d="M4 6h16v12H4V6Z" stroke="currentColor" stroke-width="1.5" opacity="0.35"/>
+              <path d="M4 7l8 6 8-6" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+            </svg>
+          </span>
+          <span class="social__label">Email</span>
+          <span class="social__hint muted" data-i18n="links.open"></span>
+        </a>
+
       </div>
 
       <p class="note muted" data-reveal data-i18n="links.note"></p>
